[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melusine"
authors = [
    {name = "Tiphaine Fabre"},
    {name = "Hugo Perrier", email = "hugorperrier@gmail.com"},
    {name = "Sacha Samama"},
    {name = "Antoine Simoulin"},
]
description = "Melusine is a high-level library for emails processing"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["nlp", "email", "courriel", "text", "data-science", "machine-learning", "natural-language-processing"]
license = {text = "Apache Software License 2.0"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
dependencies = [
    "arrow",
    "pandas>2",
    "scikit-learn>=1",
    "tqdm>=4.34",
    "omegaconf>=2.0",
]
dynamic = ["version"]

[project.optional-dependencies] # Optional
dev = ["tox", "pre-commit", "black", "flake8", "isort", "mypy", "pytest", "coverage", "build", "ruff"]
test = ["pytest", "coverage"]
transformers = ["transformers>4"]
docs = ["mkdocs", "markdown", "mkdocs-material", "mdx-include"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "melusine.VERSION"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
hide_error_codes = false
no_site_packages = true

[tool.ruff]
line-length = 120
exclude = [
    "tests",
    "docs"
]

[tool.coverage.run]
omit = [
    # omit init files in docs_src
    "docs/__init__.py",
    "docs/docs_src/*/__init__.py",
    # omit test files
    "tests/*",
    # omit anything in a .local directory anywhere
    "*/.local/*",
    # omit single files
    "melusine/connectors/__init__.py",
    "melusine/connectors/exchange.py",
]
