[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melusine"
authors = [
    {name = "Tiphaine Fabre"},
    {name = "Hugo Perrier", email = "hugorperrier@gmail.com"},
    {name = "Sacha Samama"},
    {name = "Antoine Simoulin"},
]
description = "Melusine is a high-level library for emails processing"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "email", "courriel", "text", "data-science", "machine-learning", "natural-language-processing"]
license = {text = "Apache Software License 2.0"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]
dependencies = [
    "arrow>=1.2.3",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.34",
    "omegaconf>=2.0",
]
dynamic = ["version"]

urls = { Homepage = "https://github.com/MAIF/melusine", Documentation = "https://maif.github.io/melusine/", Source = "https://github.com/MAIF/melusine" }

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "build",
    "ruff>=0.4.4"
]
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-cov",
    "google-auth-oauthlib",
    "google-api-python-client"
]
transformers = ["transformers>=4.0.0"]
connectors = ["exchangelib"]
gmail = ["google-auth-oauthlib", "google-api-python-client"]
docs = ["mkdocs", "markdown", "mkdocs-material", "mdx-include"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "melusine.VERSION"}

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
hide_error_codes = false
no_site_packages = true
python_version = "3.10"

[tool.ruff]
line-length = 120
exclude = [
    "tests",
    "docs"
]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C90", "D"]
ignore = ["D100", "D107", "D200", "D205", "D400", "D401", "D404", "D406", "D407", "D415", "D417"]

[tool.coverage.run]
omit = [
    "docs/__init__.py",
    "docs/docs_src/*/__init__.py",
    "tests/*",
    "*/.local/*",
    "melusine/connectors/__init__.py",
    "melusine/connectors/exchange.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=melusine --cov-report=term-missing"
testpaths = ["tests"]
